# EmbeddedSolver

./: .gitignore  CMakeLists.txt  sdkconfig
.github/workflows/: test.yml
main/: CMakeLists.txt  idf_component.yml  main.c
main/graphics/: colors.h  draw.c  draw.h  graphic.c  graphic.h  graphic_task.c  graphic_task.h  lvgl_task.c  lvgl_task.h  screen_manager.c  screen_manager.h
main/graphics/lcd/: hardware.h  lcd.c  lcd.h  touch.c
main/screens/: defined_screens.h
main/utils/: chip_info.h
train/: CMakeLists.txt
train/src/: evaluate_weights.c  main.c
train/src/dataset/img_handler/: img_handler.c  img_handler.h
train/src/dataset/remote/: remote.c  remote.h
train/src/evaluation/: evaluation.c  evaluation.h
train/src/filters/: conv_2d.c  conv_2d.h  flatten.c  flatten.h  max_pool_2d.c  max_pool_2d.h
train/src/logging/: logging.c  logging.h
train/src/math/: utils.h
train/src/model/: allocations.c  allocations.h  backpropagation.c  backpropagation.h  batch.c  batch.h  model.c  model.h
train/src/neuron/: activation.c  activation.h  defs.h  dense.c  dense.h
train/src/tensor/: tensor.c  tensor.h
train/tests/: test_conv2d.c  test_dense.c  test_dropout.c  test_flatten.c  test_max_pool2d.c  test_softmax_cross_entropy.c  test_tensor.c
